--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -658,8 +658,6 @@ h5 {
   background-color: transparent;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
   font-size: 0.75rem;
   line-height: 1rem;
   font-weight: 700;
@@ -869,6 +867,11 @@ h5 {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
+select {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 /*
 	
 	
@@ -992,6 +995,10 @@ h5 {
   position: relative;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .-mx-4 {
   margin-left: -1rem;
   margin-right: -1rem;
@@ -1034,6 +1041,10 @@ h5 {
   display: none;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -1046,12 +1057,24 @@ h5 {
   height: 1rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
 
 .w-96 {
   width: 24rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-12 {
@@ -1070,6 +1093,10 @@ h5 {
   width: 100%;
 }
 
+.flex-auto {
+  flex: 1 1 auto;
+}
+
 .origin-top {
   transform-origin: top;
 }
@@ -1080,6 +1107,10 @@ h5 {
 
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .place-items-center {
@@ -1098,12 +1129,16 @@ h5 {
   justify-content: space-between;
 }
 
-.gap-8 {
-  gap: 2rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1139,6 +1174,10 @@ h5 {
   overflow: hidden;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1164,6 +1203,11 @@ h5 {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(51 65 85 / var(--tw-border-opacity));
+}
+
 .bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
@@ -1177,10 +1221,6 @@ h5 {
   padding: 0.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1191,9 +1231,9 @@ h5 {
   padding-bottom: 0.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-4 {
@@ -1201,9 +1241,9 @@ h5 {
   padding-bottom: 1rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .py-8 {
@@ -1227,8 +1267,16 @@ h5 {
   padding-right: 0.5rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .pl-8 {
   padding-left: 2rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1274,6 +1322,10 @@ h5 {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .leading-none {
@@ -1368,6 +1420,15 @@ h5 {
   font-size: .625rem;
   letter-spacing: 0.025em;
 }
+
+/* 
+.app-content {
+	scrollbar-width: none;
+}
+
+.app-content::-webkit-scrollbar {
+	display: none;
+} */
 
 .dropdown-content {
   overflow: hidden;
