--- a/styles/global.css
+++ b/styles/global.css
@@ -56,7 +56,7 @@
 	}
 
 	.field-button {
-		@apply flex items-center bg-transparent px-4 py-3 text-xs font-bold tracking-wide outline-none hover:text-gray-500 focus:text-gray-300;
+		@apply flex items-center bg-transparent px-4 text-xs font-bold tracking-wide outline-none hover:text-gray-500 focus:text-gray-300;
 	}
 
 	.field-icon {
@@ -82,7 +82,7 @@
 	}
 
 	.field-input-holder {
-		@apply flex w-full overflow-hidden rounded-xl bg-black/50 font-semibold  ring-brand/50 transition focus-within:ring-4 focus-within:ring-brand hover:bg-black/75 hover:ring-4;
+		@apply flex w-full overflow-hidden rounded-xl bg-black/50 font-semibold ring-brand/50 transition focus-within:ring-4 focus-within:ring-brand hover:bg-black/75 hover:ring-4;
 	}
 
 	.field-checkbox-holder {
@@ -103,6 +103,10 @@
 
 	.field-input {
 		@apply default-spacing w-full appearance-none bg-transparent text-gray-400 outline-none transition placeholder:text-gray-700 focus:text-gray-300;
+	}
+
+	select {
+		@apply outline-none;
 	}
 
 	/*
@@ -139,6 +143,14 @@
 		@apply rounded-lg bg-red-700  px-4 py-1 text-sm font-semibold tracking-wide text-red-300;
 	}
 }
+/* 
+.app-content {
+	scrollbar-width: none;
+}
+
+.app-content::-webkit-scrollbar {
+	display: none;
+} */
 
 .dropdown-content {
 	@apply overflow-hidden rounded-lg border border-white/10 bg-gray-600/20 shadow-2xl backdrop-blur;
