--- a/styles/global.css
+++ b/styles/global.css
@@ -19,7 +19,7 @@
 	}
 
 	.border-line {
-		@apply border-t border-gray-200 dark:border-gray-800;
+		@apply border-t border-gray-200 dark:border-gray-700/50;
 	}
 }
 
@@ -93,7 +93,7 @@
 	}
 
 	.field-input-holder {
-		@apply flex w-full rounded-xl bg-gray-200/50 font-semibold ring-brand-400 transition focus-within:ring-4 hover:ring-4 dark:bg-black/75 dark:ring-brand;
+		@apply flex w-full rounded-xl bg-gray-300/25 font-semibold ring-brand-400 transition focus-within:ring-4 hover:ring-4 dark:bg-black/75 dark:ring-brand;
 	}
 
 	.field-input-holder.opaque {
@@ -159,20 +159,20 @@
 	}
 
 	.dropdown-content {
-		@apply z-50 overflow-x-hidden rounded-lg border border-black/5  bg-gray-100/75 py-4 shadow-2xl outline-none backdrop-blur-lg dark:bg-gray-700/50;
+		@apply z-50 overflow-x-hidden rounded-lg border border-black/10  bg-gray-100/75 py-4 shadow-2xl outline-none backdrop-blur-lg dark:bg-gray-700/50;
 	}
 	.dropdown-content.opaque {
 		@apply bg-gray-100 dark:bg-gray-900;
 	}
 
-	.dropdown-divider {
+	/* .dropdown-divider {
 		@apply border-t border-black/5 dark:border-white/10;
-	}
+	} */
 	.dropdown-trigger {
 		@apply text-gray-600 outline-none transition hover:text-gray-500 dark:text-gray-400 dark:hover:text-gray-200;
 	}
 	.dropdown-item {
-		@apply flex cursor-pointer py-2 px-6  text-sm font-medium text-gray-500 outline-none transition hover:bg-brand hover:text-white focus:bg-brand focus:text-white dark:text-gray-300;
+		@apply flex cursor-pointer py-2 px-6  text-sm font-normal text-gray-700 outline-none transition hover:bg-brand hover:text-white focus:bg-brand focus:text-white dark:text-gray-300;
 	}
 
 	.dropdown-item.disabled {
@@ -189,69 +189,79 @@
 	display: none;
 }
 
-.post-bg {
-	@apply bg-post-600 text-white transition;
+.feed-bg {
+	@apply bg-feed-500 text-white transition dark:bg-feed-700;
 }
-.post-bg-hover {
-	@apply ring-post-600/50 hover:bg-post-800 focus:bg-post-800 focus:ring-2;
+.feed-bg-hover {
+	@apply outline-none ring-feed-500 hover:bg-feed-600 dark:hover:bg-feed-600;
 }
-.meeting-bg {
-	@apply bg-meeting-600 text-white transition;
-}
-.meeting-bg-hover {
-	@apply ring-meeting-600/50 hover:bg-meeting-800 focus:bg-meeting-800 focus:ring-2;
-}
+
 .stories-bg {
-	@apply bg-stories-600 text-white transition;
+	@apply bg-stories-500 text-white transition dark:bg-stories-700;
 }
 .stories-bg-hover {
-	@apply ring-stories-600/50 hover:bg-stories-800 focus:bg-stories-800 focus:ring-2;
+	@apply outline-none ring-stories-500 hover:bg-stories-600 dark:hover:bg-stories-600;
 }
-.todo-bg {
-	@apply bg-todo-600 text-white transition;
+
+.meeting-bg {
+	@apply bg-meeting-500 text-white transition dark:bg-meeting-700;
 }
-.todo-bg-hover {
-	@apply ring-todo-600/50 hover:bg-todo-800 focus:bg-todo-800 focus:ring-2;
+.meeting-bg-hover {
+	@apply outline-none ring-meeting-500 hover:bg-meeting-600 dark:hover:bg-meeting-600;
 }
+
+.task-bg {
+	@apply bg-task-500 text-white transition dark:bg-task-700;
+}
+.task-bg-hover {
+	@apply outline-none ring-task-500 hover:bg-task-600 dark:hover:bg-task-600;
+}
+
 .tiktok-bg {
-	@apply bg-tiktok-600 text-white transition;
+	@apply bg-tiktok-500 text-white transition dark:bg-tiktok-600;
 }
 .tiktok-bg-hover {
-	@apply ring-tiktok-600/50 hover:bg-tiktok-800 focus:bg-tiktok-800 focus:ring-2;
+	@apply outline-none ring-tiktok-500 hover:bg-tiktok-600 dark:hover:bg-tiktok-500;
 }
+
 .idea-bg {
-	@apply bg-idea-600 text-white transition;
+	@apply bg-idea-500 text-white transition dark:bg-idea-600;
 }
 .idea-bg-hover {
-	@apply ring-idea-600/50 hover:bg-idea-800 focus:bg-idea-800 focus:ring-2;
+	@apply outline-none ring-idea-500 hover:bg-idea-600 dark:hover:bg-idea-500;
 }
+
 .do-bg {
-	@apply bg-do-600 text-white transition;
+	@apply bg-do-500 text-white transition dark:bg-do-700;
 }
 .do-bg-hover {
-	@apply ring-do-600/50 hover:bg-do-800 focus:bg-do-800 focus:ring-2;
+	@apply outline-none ring-do-500 hover:bg-do-600 dark:hover:bg-do-600;
 }
+
 .doing-bg {
-	@apply bg-doing-600 text-white transition;
+	@apply bg-doing-500 text-white transition dark:bg-doing-700;
 }
 .doing-bg-hover {
-	@apply ring-doing-600/50 hover:bg-doing-800 focus:bg-doing-800 focus:ring-2;
+	@apply outline-none ring-doing-500 hover:bg-doing-600 dark:hover:bg-doing-600;
 }
+
 .review-bg {
-	@apply bg-review-600 text-white transition;
+	@apply bg-review-500 text-white transition dark:bg-review-700;
 }
 .review-bg-hover {
-	@apply ring-review-600/50 hover:bg-review-800 focus:bg-review-800 focus:ring-2;
+	@apply outline-none ring-review-500 hover:bg-review-600 dark:hover:bg-review-600;
 }
+
 .done-bg {
-	@apply bg-done-600 text-white transition;
+	@apply bg-done-500 text-white transition dark:bg-done-700;
 }
 .done-bg-hover {
-	@apply ring-done-600/50 hover:bg-done-800 focus:bg-done-800 focus:ring-2;
+	@apply outline-none ring-done-500 hover:bg-done-600 dark:hover:bg-done-600;
 }
+
 .accomplished-bg {
-	@apply bg-accomplished-600 text-white transition;
+	@apply bg-accomplished-500 text-white transition dark:bg-accomplished-700;
 }
 .accomplished-bg-hover {
-	@apply ring-accomplished-600/50 hover:bg-accomplished-800 focus:bg-accomplished-800 focus:ring-2;
+	@apply outline-none ring-accomplished-500 hover:bg-accomplished-600 dark:hover:bg-accomplished-600;
 }
