--- a/styles/global.css
+++ b/styles/global.css
@@ -81,23 +81,34 @@
 		@apply text-brand;
 	}
 
-	.field > *:first-child {
-		@apply rounded-l-xl;
-	}
-	.field > *:last-child {
-		@apply rounded-r-xl;
-	}
-
 	.field-label {
 		@apply mb-2 mt-4 block font-semibold transition;
 	}
 
-	.field-input-holder {
-		@apply flex w-full rounded-xl  bg-gray-300/25 font-semibold ring-brand-400 transition focus-within:ring-4 hover:ring-4 dark:bg-black/75 dark:ring-brand;
+	.field-input-holder > *:first-child {
+		@apply rounded-l-xl;
+	}
+	.field-input-holder > *:last-child {
+		@apply rounded-r-xl;
+	}
+
+	.field-input-holder:not(.field-disabled) {
+		@apply flex w-full  rounded-xl bg-gray-300/25 font-semibold text-gray-500 ring-brand-500 transition focus-within:ring-4 hover:ring-4 dark:bg-black/75 dark:ring-brand;
+	}
+
+	.field-input-holder.field-disabled {
+		@apply flex w-full  rounded-xl bg-gray-300/50 font-semibold text-gray-300  dark:bg-black/25 dark:text-gray-700;
+	}
+	.field-input-holder.field-disabled .field-input {
+		@apply text-gray-300 dark:text-gray-700;
 	}
 
 	.field-input-holder.opaque {
 		@apply bg-gray-200;
+	}
+
+	.field-input-holder.darker {
+		@apply bg-gray-300/50;
 	}
 
 	.field-checkbox-holder {
@@ -112,12 +123,12 @@
 		@apply relative appearance-none rounded-lg bg-gray-300/25 p-3 outline-none ring-brand transition after:absolute after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:scale-90 after:rounded after:bg-brand  after:p-1.5 after:opacity-0 after:transition after:content-[""] checked:after:scale-100 checked:after:opacity-100 focus:ring-4 dark:bg-black/50;
 	}
 
-	.field-input-holder.error {
-		@apply ring-red-700;
+	.field-input-holder.field-error {
+		@apply ring-red-500 dark:ring-red-700;
 	}
 
 	.field-input {
-		@apply default-spacing w-full appearance-none bg-transparent font-medium text-gray-700 outline-none transition placeholder:text-gray-300 dark:placeholder:text-gray-700;
+		@apply default-spacing w-full appearance-none bg-transparent font-normal text-gray-700 antialiased outline-none transition placeholder:text-gray-300 dark:text-gray-300 dark:placeholder:text-gray-700;
 	}
 
 	select {
@@ -155,7 +166,7 @@
 	/* Error */
 
 	.error-banner {
-		@apply rounded-lg bg-red-700  px-4 py-1 text-sm font-semibold tracking-wide text-red-300;
+		@apply rounded-lg bg-red-500 px-4 py-1  text-sm font-semibold tracking-wide text-red-100 dark:bg-red-700 dark:text-red-300;
 	}
 
 	.dropdown-content {
