--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2010,6 +2010,35 @@ select {
   display: none;
 }
 
+.late-action {
+  /* @apply absolute inset-0 animate-pulse rounded ring-4 ring-red-500; */
+  position: absolute;
+  top: -0.25rem;
+  left: -0.25rem;
+  height: 0.75rem;
+  width: 0.75rem;
+}
+
+@-webkit-keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.late-action {
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .post-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(139 92 246 / var(--tw-bg-opacity));
