--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1279,6 +1279,31 @@ select {
   padding-bottom: 0.75rem;
 }
 
+.popover {
+  z-index: 999;
+  overflow-x: hidden;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  border-color: rgb(0 0 0 / 0.1);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.dark .popover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -1330,12 +1355,36 @@ select {
   bottom: 0px;
 }
 
-.z-10 {
-  z-index: 10;
+.top-\[6\.35rem\] {
+  top: 6.35rem;
 }
 
-.z-\[999\] {
-  z-index: 999;
+.top-\[6\.3rem\] {
+  top: 6.3rem;
+}
+
+.top-\[6\.45rem\] {
+  top: 6.45rem;
+}
+
+.top-\[102px\] {
+  top: 102px;
+}
+
+.top-\[101px\] {
+  top: 101px;
+}
+
+.left-px {
+  left: 1px;
+}
+
+.right-px {
+  right: 1px;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .order-1 {
@@ -1504,6 +1553,10 @@ select {
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-20 {
+  height: 5rem;
 }
 
 .max-h-40 {
@@ -1855,8 +1908,104 @@ select {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-black\/10 {
+  --tw-gradient-from: rgb(0 0 0 / 0.1);
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-black\/20 {
+  --tw-gradient-from: rgb(0 0 0 / 0.2);
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-black\/50 {
+  --tw-gradient-from: rgb(0 0 0 / 0.5);
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-600\/50 {
+  --tw-gradient-from: rgb(71 85 105 / 0.5);
+  --tw-gradient-to: rgb(71 85 105 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-600 {
+  --tw-gradient-from: #475569;
+  --tw-gradient-to: rgb(71 85 105 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-500\/50 {
+  --tw-gradient-from: rgb(100 116 139 / 0.5);
+  --tw-gradient-to: rgb(100 116 139 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-500\/20 {
+  --tw-gradient-from: rgb(100 116 139 / 0.2);
+  --tw-gradient-to: rgb(100 116 139 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-200\/20 {
+  --tw-gradient-from: rgb(226 232 240 / 0.2);
+  --tw-gradient-to: rgb(226 232 240 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-200\/50 {
+  --tw-gradient-from: rgb(226 232 240 / 0.5);
+  --tw-gradient-to: rgb(226 232 240 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-200 {
+  --tw-gradient-from: #e2e8f0;
+  --tw-gradient-to: rgb(226 232 240 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-200\/75 {
+  --tw-gradient-from: rgb(226 232 240 / 0.75);
+  --tw-gradient-to: rgb(226 232 240 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-400\/75 {
+  --tw-gradient-from: rgb(148 163 184 / 0.75);
+  --tw-gradient-to: rgb(148 163 184 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-400\/50 {
+  --tw-gradient-from: rgb(148 163 184 / 0.5);
+  --tw-gradient-to: rgb(148 163 184 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-400\/25 {
+  --tw-gradient-from: rgb(148 163 184 / 0.25);
+  --tw-gradient-to: rgb(148 163 184 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-gray-600\/0 {
   --tw-gradient-to: rgb(71 85 105 / 0);
+}
+
+.to-black\/0 {
+  --tw-gradient-to: rgb(0 0 0 / 0);
+}
+
+.to-gray-200\/0 {
+  --tw-gradient-to: rgb(226 232 240 / 0);
+}
+
+.to-gray-400\/0 {
+  --tw-gradient-to: rgb(148 163 184 / 0);
 }
 
 .p-8 {
@@ -2656,6 +2805,22 @@ select {
 
 .dark .dark\:bg-black\/20 {
   background-color: rgb(0 0 0 / 0.2);
+}
+
+.dark .dark\:from-black\/50 {
+  --tw-gradient-from: rgb(0 0 0 / 0.5);
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.dark .dark\:from-black\/75 {
+  --tw-gradient-from: rgb(0 0 0 / 0.75);
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.dark .dark\:to-black\/0 {
+  --tw-gradient-to: rgb(0 0 0 / 0);
 }
 
 .dark .dark\:text-white {
